--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@
         border-radius: 1rem;
         font-family: inherit;
         font-size: var(--fs-form);
-        box-shadow: 0 4px 6px hsla(0 0 0 0.02);
+        box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.02);
         -webkit-box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.02);
         -moz-box-shadow: 0 4px 6px hsla(0 0%, 0%, 0.02);
 
@@ -336,7 +336,7 @@
             outline: none;
             padding: calc(12 / 16 * 1rem) calc(48 / 16 * 1rem);
             border-radius: 1rem;
-            box-shadow: 0 4px 6px hsla(0 0 0 0.02);
+            box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.02);
             -webkit-box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.02);
             -moz-box-shadow: 0 4px 6px hsla(0 0%, 0%, 0.02);
             cursor: pointer;
@@ -434,11 +434,17 @@
         width: calc(1520 / 16 * 1rem);
         display: grid;
         grid-template-columns: auto auto;
-        grid-template-rows: auto auto;
-        grid-template-areas:
-            "project announcement"
-            "project trending";
+        grid-template-rows: auto;
+        grid-template-areas: "left right";
+
         gap: calc(40 / 16 * 1rem);
+    }
+
+    .main-left {
+        grid-area: left;
+    }
+    .main-right {
+        grid-area: right;
     }
 
     .title {
@@ -450,7 +456,7 @@
     .projects-container {
         width: calc(1000 / 16 * 1rem);
 
-        grid-area: project;
+        /* grid-area: project; */
         align-items: stretch;
     }
 
@@ -478,8 +484,8 @@
         padding: 2rem;
         border: 1px solid var(--color-white);
         border-radius: 1rem;
-        box-shadow: 0 2px 5px hsla(0 0 0 0.02);
-        -webkit-box-shadow: 0 2px 5px hsla(0 0 0 0.02);
+        box-shadow: 0 2px 5px hsla(0, 0%, 0%, 0.02);
+        -webkit-box-shadow: 0 2px 5px hsla(0, 0%, 0%, 0.02);
     }
 
     .card:first-of-type {
@@ -597,21 +603,58 @@
     }
 
     .announcements-container {
-        background-color: blue;
-        grid-area: announcement;
         width: calc(480 / 16 * 1rem);
+        margin-bottom: calc(40 / 16 * 1rem);
+        /* height: fit-content; */
     }
 
     .announcements {
-        display: grid;
-        gap: 1rem;
+        --color-title: var(--color-gray-900);
+        --color-text: var(--color-gray-700);
+        --fs-title: var(--fs-18);
+
+        border: 1px solid white;
+        /* display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr; */
+        /* height: calc(409 / 16 * 1rem); */
+        row-gap: 1rem;
         padding: 2rem;
-        height: calc(409 / 16 * 1rem);
+        background: linear-gradient(
+            to bottom right,
+            hsla(0, 0%, 100%, 0.82),
+            hsla(0, 0%, 100%, 0.8)
+        );
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 1rem;
+    }
+
+    .announcement {
+        border-bottom: 2px solid hsla(218, 23%, 23%, 0.1);
+        /* height: fit-content; */
+        padding-bottom: 1rem;
+        margin-bottom: 1rem;
+
+        .title {
+            margin-bottom: 4px;
+            font-size: var(--fs-title);
+            font-weight: var(--fw-semibold);
+            color: var(--color-title);
+        }
+        .text {
+            color: var(--color-text);
+        }
+    }
+
+    .announcement:nth-of-type(3) {
+        border: none;
+        margin-bottom: 0;
     }
 
     .trending-container {
         background-color: green;
-        grid-area: trending;
-        height: calc(470 / 16 * 1rem);
+
+        height: calc(700 / 16 * 1rem);
     }
 }
